Add posterize, blur ...

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                         <a id="grayToolBarColor" class="dropdown-item">Grayscale</a>
                         <a id="dilateToolBarColor" class="dropdown-item">Dilate</a>
                         <a id="erodeToolBarColor" class="dropdown-item">Erode</a>
+                        <a id="thresholdToolBarColor" class="dropdown-item">Threshold</a>
+                        <a id="posterizeBarColor" class="dropdown-item">Posterize</a>
+                        <a id="blurBarColor" class="dropdown-item">Blur</a>
                         <a id="invertToolBarColor" class="dropdown-item">Invert</a>
                     </div>
                 </div>
